Do Not Edit!  This is a generated file.
	You should edit the NEWS file instead.

2006-02-04 13:54  rkowen

	* version.c: The current version for the i18n mods is 3.3 alpha

2006-02-04 13:53  rkowen

	* main.c: Alert translators to the "common" strings.

2006-02-04 13:06  rkowen

	* error.c, init.c, utility.c, init/perl.in: Rolled in fixes from
	the main trunk to the 3.2.0 branch.

2006-02-04 12:44  rkowen

	* error.c: Fixed grammar error.

2006-02-04 09:04  rkowen

	* utility.c: [ 730293 ] remove-path won't remove paths with a $ in
	it.  Made the change and the tests ran fine.  I'm not sure what
	cleanse_path() is supposed to do.

2006-02-04 08:33  rkowen

	* init.c: [ 672612 ] Tcl command execution failed and modules use
	pointed out the use of the deprecated Tcl fn Tcl_VarEval(). 
	Replaced this with Tcl_Eval() and added some Tcl logic to handle
	when $auto_path is not set.

2006-02-04 00:36  rkowen

	* init/perl.in: Fixed where it needs to reference $ENV{...} [
	705033 ] Bug in init/perl

2006-02-03 17:41  rkowen

	* init/perl.in: Added 1 at end so perl/init can be used by the perl
	require.

2006-02-03 17:12  rkowen

	* cmdConflict.c: Removed i18n from the debugging statements ... not
	necessary.

2006-02-03 17:10  rkowen

	* Makefile.am, utility.c: Rolled in the changes from 3-2-0 patch1

2006-02-03 16:46  rkowen

	* Makefile.am: Added macros for gzip and bzip2

2006-02-03 16:45  rkowen

	* version.c: Trying to get the patching working.

2006-02-03 16:21  rkowen

	* version.c: Set to patch level 1

2006-02-03 16:20  rkowen

	* utility.c: Fixed the sh alias function syntax when being eval'd.

2006-02-03 16:11  rkowen

	* Makefile.am: Forgot to add the LICENSE.GPL to the distribution.

2006-02-03 14:36  rkowen

	* utility.c: Added ';' in the list of escaped chars.

2006-01-30 20:16  rkowen

	* ModuleCmd_Avail.c, ModuleCmd_Help.c, ModuleCmd_Init.c,
	ModuleCmd_List.c, ModuleCmd_Update.c, ModuleCmd_Use.c,
	ModuleCmd_Whatis.c, cmdConflict.c, cmdModule.c, cmdUname.c,