@@ -1,3 +1,8 @@
+.deps
+.spec
+ABOUT-NLS
+Makefile
+Makefile.in
 aclocal.m4
 autom4te.cache
 config.h
@@ -5,16 +10,12 @@ config.h.in
 config.log
 config.status
 configure
-.deps
-Makefile
-Makefile.in
 modulecmd
+modules*.tar.*
 modules.log
 modules.lsm
 modules.sum
 site.exp
-.spec
 stamp-h
-stamp-h1
 stamp-h.in
-modules*.tar.*
+stamp-h1
