@@ -1,0 +1,55 @@
+#!/bin/sh
+
+while read n en nv l
+do
+	echo ========== $n, $en, $nv, $l ==========
+	if [ x"$1" = x"clean" ]; then
+		rm $n
+	else
+		cat <<EOF >$n
+#%Module########################################################################
+## language choice
+proc ModulesHelp { } {
+	global emversion emlang
+	puts stderr "\tLanguage Choice - $en"
+	puts stderr "\n\tVersion \$emversion (\$emlang)\n"
+}
+# for Tcl script use only
+set		emversion	"$nv"
+set		emlang		"$l"
+
+module-whatis	"\$emversion (\$emlang)"
+
+if [ expr [ module-info mode load ] || [ module-info mode display ] ] {
+	prepend-path	LANG_STACK	\$env(LANG)
+	setenv		LANG		\$emlang
+}
+
+if [ module-info mode remove ] {
+	unsetenv LANG [lindex [split \$env(LANG_STACK) : ] 0 ]
+	if [ string match \$env(LANG) \$emlang ] {
+		prepend-path	LANG_STACK	\$env(LANG)
+	} else {
+		prepend-path	LANG_STACK	\$emlang
+	}
+}
+
+EOF
+	fi
+
+done <<!
+en	British		English/U.K.	en_EN.UTF-8
+us	American	English/U.S.	en_US.UTF-8
+de	German		Deutsch		de_DE.UTF-8
+gr	Greek		Ελληνικά	gr_GR.UTF-8
+es	Spanish		Español		es_ES.UTF-8
+fr	French		Français	fr_FR.UTF-8
+it	Italian		Italiano	it_IT.UTF-8
+ja	Japanese	日本語		ja_JP.UTF-8
+no	Norwegian	Norsk		no_NO.UTF-8
+ru	Russian		Русско		ru_RU.UTF-8
+fi	Finnish		Suomi		fi_FI.UTF-8
+zh	Chinese		汉语		zh_CN.UTF-8
+!
+
+exit
