@@ -1,0 +1,21 @@
+Makefile
+Makefile.in
+Makefile.in.in
+Makevars.template
+POTFILES
+Rules-quot
+boldquot.sed
+en@boldquot.gmo
+en@boldquot.header
+en@boldquot.insert-header
+en@boldquot.po
+en@quot.gmo
+en@quot.header
+en@quot.insert-header
+en@quot.po
+insert-header.sin
+modules.pot
+quot.sed
+remove-potcdate.sed
+remove-potcdate.sin
+stamp-po
