@@ -1,0 +1,2 @@
+# set of available languages.
+en@quot en@boldquot
