@@ -1,0 +1,10 @@
+# List of source files which contain translatable strings.
+
+# Package source files
+error.c
+getopt.c
+main.c
+ModuleCmd_Help.c
+ModuleCmd_Init.c
+ModuleCmd_List.c
+utility.c
