@@ -1,6 +1,17 @@
 Do Not Edit!  This is a generated file.
 	You should edit the NEWS file instead.
 
+2006-02-04 21:11  rkowen
+
+	* Makefile.am: After 'gettextize'.
+
+2006-02-04 21:08  rkowen
+
+	* configure.ac: The changes of 'gettextize', note that autopoint is
+	not too smart with AC_CONFIG_AUX_DIR ... it appends on any text
+	after macro to the directory name.  So do not add 'dnl' for
+	comments or to escape the \n.
+
 2006-02-04 13:54  rkowen
 
 	* version.c: The current version for the i18n mods is 3.3 alpha
@@ -1370,7 +1381,7 @@ Do Not Edit!  This is a generated file.
 
 2003-08-07 14:07  harlan
 
-	* tcl/modulecmd.tcl: Add $Revision: 1.51 $ to the version
+	* tcl/modulecmd.tcl: Add $Revision: 1.52 $ to the version
 
 2003-08-07 12:52  harlan
 
